# Personal_CLI_assistant

./: .gitignore  README.md  notes.pickle  presentation.pptx
personal_assistant/: LICENSE  README.md  setup.py
personal_assistant/personal_assistant/: AddressBook.json  assistant.py  classes.py  commands.py  functions.py  notes.py
personal_assistant_perchik/: README.md  project.toml  setup.cfg  setup.py
personal_assistant_perchik/personal_assistant_perchik/: Pipfile  assistant.py  classes.py  commands.py  dockerfile  functions.py  notes.py  sort.py
