[metadata]
name = personal_assistant_perchik
version = 1.0.1
url = https://github.com/IvanShkvyr/Personal_CLI_assistant
author = Ivan Shkvyr, Musfer Adzhymambetov, Taras Breurosh
description = A personal assistant with a command line interface
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    

[options]
packages = find:
install_requires =
    InquirerPy